# RCSB_UTILS_TARGETS HISTORY
   7-Nov-2020  - V0.11 Created module
  12-Nov-2020  - V0.12 Add consolidation of DrugBank target FASTA files
  24-Nov-2020  - V0.13 Add ChEMBLTargetProvider() and tests
  28-Nov-2020  - V0.14 Add CARDTargetProvider() and tests
  30-Nov-2020  - V0.15 Add SAbDabTargetProvider() and tests
   1-Dec-2020  - V0.16 Connect to UniProtIdMappingProvider() and add tagged fasta comment output.
   2-Dec-2020  - V0.17 Migrate molecule based ChEMBL methods to rcsb.utils.chemref.ChEMBLProvider()
