@@ -6,4 +6,5 @@
   30-Nov-2020  - V0.15 Add SAbDabTargetProvider() and tests
    1-Dec-2020  - V0.16 Connect to UniProtIdMappingProvider() and add tagged fasta comment output.
    2-Dec-2020  - V0.17 Migrate molecule based ChEMBL methods to rcsb.utils.chemref.ChEMBLProvider()
+   6-Dec-2020  - V0.18 Expose an exportFasta() method in each provider and add taxon ouput file options
 
